# hikyaku

./: CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: config.rs  error.rs  main.rs  mcp.rs
src/accounts/: mod.rs  oauth2.rs  sync.rs
src/automation/: mod.rs
src/index/: mod.rs
src/render/: mod.rs
src/tui/: app.rs  mod.rs  theme.rs
themes/: nord.toml
